--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,3 +1,26 @@
+.profile {
+  width: 50%;
+  background-color: rgb(202, 226, 226);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.description {
+  text-align: center;
+}
+
+.stats {
+  list-style: none;
+  display: flex;
+  gap: 70px;
+}
+
+.stats li {
+  display: flex;
+  flex-direction: column;
+}
+
 .avatar {
   border-radius: 50%;
   background-color: bisque;
